k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsm-app
  namespace: itsm-app
  labels:
    app: itsm-app
spec:
  type: ClusterIP
  selector:
    app: itsm-app
  ports:
    - name: http
      port: 8000
      targetPort: http
