k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: itsm-app
  namespace: itsm-app
  labels:
    app: itsm-app
spec:
  to:
    kind: Service
    name: itsm-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
